feat: Add Cloudflare Pages deployment pipeline with 256 simulation routing
- Add routing layer for /sim/[dimension]/[cartridge-id] URL schema
- Create simulations.json config for 20+ simulations across 5 dimensions
- Add Cloudflare Pages _redirects and _headers for SPA routing
- Add GitHub Actions workflow for automated deployment
- Configure custom domain app.graviton.dev
- Update index.html with hub UI and client-side router

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ repository = "https://github.com/physicsfamily/entropy_zero"
 [workspace.dependencies]
 # Core dependencies
 bevy = { version = "0.14", default-features = false }
-bevy_egui = "0.28"
+bevy_egui = { version = "0.28", default-features = false, features = ["default_fonts", "render"] }
 log = "0.4"
 wasm-bindgen = "0.2"
 rand = "0.8"
@@ -32,6 +32,8 @@ ez_renderer = { path = "crates/ez_renderer" }
 ez_ui = { path = "crates/ez_ui" }
 ez_physics = { path = "crates/ez_physics" }
 classical_mechanics = { path = "simulations/classical_mechanics" }
+
+
 
 [profile.release]
 opt-level = 3
